--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@tabler/icons-react": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
