--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
     "@tabler/icons-react": "^2.30.0",
+    "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.32.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
-    "react-query": "^3.39.3",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
